calendar widget - tiny letter spacing fix

--- a/assets/styles/src/modules/_widget.scss
+++ b/assets/styles/src/modules/_widget.scss
@@ -151,7 +151,7 @@ tr.twEventRow td {
 		text-transform: none;
 		font-size: 1rem;
 		font-weight: 400;
-		letter-spacing: 1;
+		letter-spacing: .03em;
 		line-height: 120%;
 		padding-left: 1.4rem;
 		padding-top: 0;
